--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.06.2022 08:14:54</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.06.2022 08:45:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 29.6.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Jáhlový puding s malinami  (bez lepku a laktózy) </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Závin plněný tvarohem a jablky </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorská bageta s kuřecím masem</div>
+<div class="cena">89 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Fazolová polévka, slanina, majoránka v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Fazolová polévka, slanina, majoránka samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Uzená krkovice, křenová omáčka, restovaná cibulka, pečené brambory <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Caesar salát, grilované kuřecí prso, slanina, krutony, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Ragú z hlívy ústřičné, zapečená polenta se sušenými rajčaty, rukola <em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -54,7 +104,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se salsou verde a brokolici, hummus ze zluteho hrachu, listovy salatek 149</li><li>Peceny filet z cerstveho candata se salsou verce a brokolici, hummus ze zluteho hrachu, listovy salatek 179</li><li>Grilovany kruti kebab v tanduri marinade se zazvorem a citrony, okurkove tzatziki, korenena ryze, listovy salatek 149</li><li>Burrito s pecenymi trhanymi prsicky divoke kachny a pecenymi palivymi slovenskymi paprikami, avokadove guacamole, pecene brambory, listovy salatek {L} 175</li><li>Indicky dal z cervene cocky s listovym spenatem, zazvorem a sazenym vejcem, chlebove placky, listovy salatek {L} 149</li></ol>
+<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle se zelenymi bylinkami a cerstvou zeleninou 149</li><li>Peceny filet z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zelenymi bylinkami a cerstvou zeleninou 179</li><li>Kow mo daeng – grilovane thajske veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, listovy salatek 149</li><li>Italske spenatove rizoto s parmezanem a grilovanymi kralicimi kotletkami, listovy salatek 179</li><li>Indicka pakora {cizrnove smazenky} s mladou cervenou repou a brokolici, okurkove tzatziki, jahly, listovy salatek 149</li></ol>
 </td>
 </tr>
 </table>
