--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.06.2022 09:09:22</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.06.2022 09:35:43</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -102,7 +102,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Bengalske pikantni kari s kousky rybich filetu, kvetakem, cuketami a jogurtem, jasminova ryze 149</li><li>Spagety s cerstvymi krevetami, rajcaty, rimskym salatem a bazalkovym pestem {L} 179</li><li>Malajsky hovezi rendang s kokosovym mlekem, bramborami a kardamonem, jasminova ryze, salatek 149</li><li>Pecena kanci plec na jalovci a cesneku, stouchane brambory se zelenou cibulkou, pecena mlada cervena repa 175 </li><li>Maghrebska zapecena saksuka s rajcaty, vejci, paprikami a ovcim balkanskym syrem, kuskus, salatek {L} 149 </li></ol>
+<ol><li>Bengalske pikantni kari s kousky rybich filetu, kvetakem, cuketami a jogurtem, jasminova ryze 149</li><li>Spagety s cerstvymi krevetami, rajcaty, rimskym salatem a bazalkovym pestem {L} 179</li><li>Malajsky hovezi rendang s kokosovym mlekem, bramborami a kardamonem, jasminova ryze, salatek 149</li><li>Pecena kanci plec na jalovci a cesneku, stouchane brambory s kapustou, pecena mlada cervena repa 175 </li><li>Maghrebska zapecena saksuka s rajcaty, vejci, paprikami a ovcim balkanskym syrem, kuskus, salatek {L} 149 </li></ol>
 </td>
 </tr>
 </table>
